Adjust names to be more uniform, some other small fixes

--- a/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
@@ -35,7 +35,7 @@ PART
 	entryCost = 1
 	category = Utility
 	subcategory = 0
-	title = Cargo Dragon Parachute
+	title = Dragon 1 Parachute
 	manufacturer = SpaceX
 	description = Cargo Dragon Parachute.
 	tags = Spacex, Dragon, CRS
