--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
@@ -48,10 +48,10 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Crew Dragon Capsule
+	title = Dragon 2 Crew Capsule (LEO)
 	manufacturer = SpaceX
 	description = SpaceX’s next-generation Dragon V2 spacecraft designed to carry humans to the International Space Station and Back.
-	tags = Spacex, Dragon, Crew
+	tags = Spacex, Dragon, Crew, Leo
 
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
@@ -237,6 +237,7 @@ PART
 		name = ModuleEnginesRF
 		thrustVectorTransformName = smokePoint
 		EngineType = LiquidFuel
+		throttleResponseRate = 100
 	}
 
 	MODULE
@@ -422,7 +423,7 @@ PART
 //	Configure TestFlight
 //	================================================================================
 
-@PART[ROC-Dragon2CM]:HAS[[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-Dragon2CM]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
