--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
@@ -48,7 +48,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Crew Dragon Capsule (Lunar)
+	title = Dragon 2 Crew Capsule (Lunar)
 	manufacturer = SpaceX
 	description = SpaceX’s next-generation Dragon V2 spacecraft designed to carry humans to the Moon and Back.
 	tags = Spacex, Dragon, Crew, Lunar
@@ -237,6 +237,7 @@ PART
 		name = ModuleEnginesRF
 		thrustVectorTransformName = smokePoint
 		EngineType = LiquidFuel
+		throttleResponseRate = 100
 	}
 
 	MODULE
@@ -422,7 +423,7 @@ PART
 //	Configure TestFlight
 //	================================================================================
 
-@PART[ROC-Dragon2CMLunar]:HAS[[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-Dragon2CMLunar]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
