--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
@@ -43,7 +43,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Cargo Dragon 2 Capsule
+	title = Dragon 2 Cargo Capsule
 	manufacturer = SpaceX
 	description = The successor to the Dragon Cargo, the Dragon Cargo 2 is based on the newly developed Crew Dragon. Since the abort ability is not required for cargo missions, the Superdraco engines and associated piping have been removed, saving a significant amount of mass which instead can be used for Cargo. Windows have also been removed.
 	tags = Spacex, Dragon, Cargo
