--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoSM.cfg
@@ -36,7 +36,7 @@
 	entryCost = 1
 	category = Structural
 	subcategory = 0
-	title = Cargo Dragon 2 Trunk
+	title = Dragon 2 Cargo Trunk
 	manufacturer = SpaceX
 	description = A modified version of the Crew Dragon trunk. 2 of the fins have been removed to save mass, since they are not needed for aerodynamic stability. You are able to attach payloads inside the trunk.
 	tags = Spacex, Dragon, Cargo
