--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute2.cfg
@@ -35,7 +35,7 @@
 	entryCost = 1
 	category = Utility
 	subcategory = 0
-	title = Crew Dragon Drogue Parachute
+	title = Dragon 2 Drogue Parachute
 	manufacturer = SpaceX
 	description = Crew Dragon Drogue Parachute.
 	tags = Spacex, Dragon, Crew
