--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover1.cfg
@@ -37,7 +37,7 @@ PART
 	entryCost = 1
 	category = Aero
 	subcategory = 0
-	title = Crew Dragon Main Chute Cover
+	title = Dragon 2 Main Chute Cover
 	manufacturer = SpaceX
 	description = Crew Dragon Main Chute Cover.
 	tags = Spacex, Dragon, Crew
