--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover2.cfg
@@ -36,7 +36,7 @@ PART
 	entryCost = 1
 	category = Aero
 	subcategory = 0
-	title = Crew Dragon Drogue Chute Cover
+	title = Dragon 2 Drogue Chute Cover
 	manufacturer = SpaceX
 	description = Crew Dragon Drogue Chute Cover.
 	tags = Spacex, Dragon, Crew
