--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2DP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2DP.cfg
@@ -32,7 +32,7 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Crew Dragon Capsule Docking Port
+	title = Dragon 2 Capsule Docking Port
 	manufacturer = SpaceX
 	description = Crew Dragon Capsule Docking Port.
 	tags = Spacex, Dragon, Crew
