--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2HS.cfg
@@ -50,7 +50,7 @@
 	entryCost = 1
 	category = Thermal
 	subcategory = 0
-	title = Crew Dragon PICA-X Heatshield
+	title = Dragon 2 PICA-X Heatshield
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, Crew
