--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonAdapter.cfg
@@ -36,7 +36,7 @@ PART
 	entryCost = 1
 	category = Aero
 	subcategory = 0
-	title = Cargo Dragon Vehicle Adapter
+	title = Dragon 1 Vehicle Adapter
 	manufacturer = SpaceX
 	description = A simple piece of composite and metal for which the Dragon Trunk can be seamlessly attached and detached to it's launch vehicle.
 	tags = Spacex, Dragon, CRS
