--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
@@ -38,7 +38,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Cargo Dragon Capsule
+	title = Dragon 1 Cargo Capsule
 	manufacturer = SpaceX
 	description = SpaceX’s next-generation Dragon V1 spacecraft designed to carry cargo & supplies to the International Space Station.
 	tags = Spacex, Dragon, CRS
