--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
@@ -37,7 +37,7 @@ PART
 	entryCost = 1
 	category = Aero
 	subcategory = 0
-	title = Cargo Dragon Nose Cone
+	title = Dragon 1 Nose Cone
 	manufacturer = SpaceX
 	description = A blunt nose cone to be fitted atop of the Cargo Dragon spacecraft to both protect the docking system and make it more aerodynamic.
 	tags = Spacex, Dragon, CRS
