--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonDP.cfg
@@ -33,7 +33,7 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Cargo Dragon Capsule Docking Port
+	title = Dragon 1 Capsule Docking Port
 	manufacturer = SpaceX
 	description = Cargo Dragon Capsule Docking Port.
 	tags = Spacex, Dragon, CRS
