--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonHS.cfg
@@ -38,7 +38,7 @@ PART
 	entryCost = 1
 	category = Thermal
 	subcategory = 0
-	title = Cargo Dragon PICA-X Heatshield
+	title = Dragon 1 PICA-X Heatshield
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, CRS
