--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSC.cfg
@@ -35,7 +35,7 @@ PART
 	entryCost = 1
 	category = Aero
 	subcategory = 0
-	title = Cargo Dragon Trunk Solar Panel Fairing
+	title = Dragon 1 Solar Panel Fairing
 	manufacturer = SpaceX
 	description = A cover to attach to the Dragon trunk in order to make it aerodynamic and shield the solar arrays from the harshness of ascent. Jettisoned shortly after Dragon separation.
 	tags = Spacex, Dragon, CRS
