--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSM.cfg
@@ -41,7 +41,7 @@ PART
 	entryCost = 1
 	category = Structural
 	subcategory = 0
-	title = Cargo Dragon Trunk
+	title = Dragon 1 Cargo Trunk
 	manufacturer = SpaceX
 	description = A roomy cargo container designed to hold unpressurized payloads. Designed to have two solar panels with solar panel covers attached to it in pairs.
 	tags = Spacex, Dragon, CRS
