--- a/GameData/ROCapsules/PartConfigs/DragonXL/PhoenixIndustries Dragon/DragonXLSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/PhoenixIndustries Dragon/DragonXLSP.cfg
@@ -14,6 +14,7 @@ PART
 	{
 		model = ROCapsules/Assets/PhoenixIndustries/Dragon/DragonXLSP
 		scale = 1.406, 1.406, 1.406
+		rotation = 0, -90, 0
 	}
 
 	scale = 1.0
@@ -33,7 +34,7 @@ PART
 	entryCost = 1
 	category = Electrical
 	subcategory = 0
-	title = Cargo Dragon XL Solar Panel
+	title = Dragon XL Solar Panel
 	manufacturer = SpaceX
 	description = Large and efficient solar panel array designed to attach to Dragon XL to provide power for orbital purposes.
 	tags = Spacex, DragonXL, Gateway
