--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -20,8 +20,8 @@ PART
 	rescaleFactor = 1.0
 
 	node_stack_top = 0.0, 4.83112, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_solarattach1 = -2.01807, -3.48542, 0.26229, 0.0, 1.0, 0.0, 2
-	node_stack_solarattach2 = 2.01807, -3.48542, -0.26229, 0.0, -1.0, 0.0, 2
+	node_stack_solarattach1 = 2.01807, -3.48542, 0.26229, 0.0, 1.0, 0.0, 2
+	node_stack_solarattach2 = -2.01807, -3.48542, -0.26229, 0.0, -1.0, 0.0, 2
 	node_stack_trunk = 0.0, -0.628486, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,1,0
@@ -35,7 +35,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Cargo Dragon XL Spacecraft
+	title = Dragon XL Cargo Capsule
 	manufacturer = SpaceX
 	description = SpaceX’s next-generation Dragon XL spacecraft designed to carry cargo & supplies to the Lunar Gateway Station.
 	tags = Spacex, DragonXL, Gateway
