--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXLDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXLDP.cfg
@@ -14,6 +14,7 @@ PART
 	{
 		model = ROCapsules/Assets/Vader111/DragonXL/DragonXLDP
 		scale = 1.0, 1.0, 1.0
+		rotation = 0, -90, 0
 	}
 
 	scale = 1.0
@@ -33,9 +34,9 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Cargo Dragon XL Docking Port
+	title = Dragon XL Capsule Docking Port
 	manufacturer = SpaceX
-	description = Cargo Dragon XL Docking Port.
+	description = Cargo Dragon XL Capsule Docking Port.
 	tags = Spacex, DragonXL, Gateway
 	bulkheadProfiles = size1
 
