--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarCM.cfg
@@ -37,7 +37,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Starship Lunar Spacecraft Command Module
+	title = Starship Lunar Command Module
 	manufacturer = SpaceX
 	description = SpaceX’s next-generation Starship Lunar spacecraft designed to carry humans, cargo & supplies to the Lunar Surface & Setup a Base.
 	tags = Spacex, Starship, Lunar, Artemis
