--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
@@ -427,7 +427,8 @@ PART
 	}
 }
 
-@PART[ROC-StarshipLunarTank]:HAS[[@CONFIG[Starship?Lunar?Engines]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-StarshipLunarTank]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Starship?Lunar?Engines]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+
 {
 	TESTFLIGHT
 	{
