--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute1.cfg
@@ -35,7 +35,7 @@
 	entryCost = 1
 	category = Utility
 	subcategory = 0
-	title = Crew Dragon Main Parachute
+	title = Dragon 2 Main Parachute
 	manufacturer = SpaceX
 	description = Crew Dragon Main Parachute.
 	tags = Spacex, Dragon, Crew
