--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2SM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2SM.cfg
@@ -36,7 +36,7 @@
 	entryCost = 1
 	category = Structural
 	subcategory = 0
-	title = Crew Dragon Trunk
+	title = Dragon 2 Trunk
 	manufacturer = SpaceX
 	description = A roomy cargo container designed to hold unpressurized payloads. It also is equipped with a solar panel coating and some aerodynamic fins.
 	tags = Spacex, Dragon, Crew
