--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSP.cfg
@@ -14,6 +14,7 @@ PART
 	{
 		model = ROCapsules/Assets/PhoenixIndustries/Dragon/DragonSP
 		scale = 1.9, 1.9, 1.9
+		rotation = 0, -90, 0
 	}
 
 	scale = 1.0
@@ -33,7 +34,7 @@ PART
 	entryCost = 1
 	category = Electrical
 	subcategory = 0
-	title = Cargo Dragon Trunk Solar Panel
+	title = Dragon 1 Solar Panel
 	manufacturer = SpaceX
 	description = Large and efficient solar panel array designed to attach to Dragon trunk to provide power for orbital purposes.
 	tags = Spacex, Dragon, CRS
