--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -13,16 +13,15 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/Vader111/DragonXL/DragonXL
-		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
 	rescaleFactor = 1.0
 
 	node_stack_top = 0.0, 4.83112, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_solarattach1 = 2.01807, -3.48542, 0.26229, 0.0, 1.0, 0.0, 2
-	node_stack_solarattach2 = -2.01807, -3.48542, -0.26229, 0.0, -1.0, 0.0, 2
-	node_stack_trunk = 0.0, -0.628486, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_SolarAttach1 = 2.01807, -3.48542, 0.26229, 0.0, 1.0, 0.0, 2
+	node_stack_SolarAttach2 = -2.01807, -3.48542, -0.26229, 0.0, -1.0, 0.0, 2
+	node_stack_Trunk = 0.0, -0.628486, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,1,0
 
@@ -135,7 +134,7 @@ PART
 		menuName = Decouple Trunk Storage
 		ejectionForce = 10
 		isOmniDecoupler = false
-		explosiveNodeID = trunk
+		explosiveNodeID = Trunk
 	}
 
 	MODULE
