Fix Antenna Animation

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
@@ -61,7 +61,7 @@ PART
 	MODULE
 	{
 		name = ModuleAnimateGeneric
-		animationName = extend
+		animationName = deploy
 		isOneShot = false
 		startEventGUIName = Extend Antenna
 		endEventGUIName = Retract Antenna
