Separate Apollo Heatsheild from Apollo Capsule

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -25,13 +25,6 @@ PART
 		rotation = 0.0, 180.0, 0.0
 	}
 	
-	MODEL // Model for the Heat Shield
-	{
-		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
-		scale = 1.0, 1.0, 1.0
-		position = 0.0, -0.713, 0.0
-	}
-	
 	scale = 1.0
 	rescaleFactor = 1.0
 	
@@ -54,7 +47,7 @@ PART
 	manufacturer = Rockwell International
 	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
 	
-	mass = 4.385
+	mass = 3.234
 	
 	category = Pods
 	subcategory = 0
@@ -80,51 +73,44 @@ PART
 		
 	crashTolerance = 8
 	maxTemp = 973.15
-	emissiveConstant = 0.6 // not too absorptive for reentry
+	skinMaxTemp = 3600
+	emissiveConstant = 0.54 // stainless steel
 	thermalMassModifier = 1.0
-	skinMassPerArea = 2.0
+	skinMassPerArea = 7.9 //1 mm thick stainless
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
 	
 	fuelCrossfeed = true
 	
-	MODULE
-	{
-		name = ModuleColorChanger
-		moduleID = HeatShieldCharAnim
-		shaderProperty = _BurnColor
-		useRate = False
-		toggleInEditor = False
-		toggleInFlight = False
-
-		redCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		greenCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		blueCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		alphaCurve
-		{
-			key = 0 0.8
-		}
-	}
-	
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0.75
+		lossExp = -40000
+		lossConst = 15000
+		pyrolysisLossFactor = 40000
+		ablationTempThresh = 500
+		reentryConductivity = 0.01
+		infoTemp = 3000
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 10
+		amount = 10
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 7.5
+		amount = 0
+	}
 	
 	MODULE
 	{
@@ -146,7 +132,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.17
+		DescentModeCoM = 0, 0, -0.17
 	}
 
 	MODULE
@@ -519,24 +505,6 @@ PART
 			}
 		}		
 	}
-}
-
-// Let RO Heatshield configure defaults
-@PART[ROC-ApolloCMBlockIII]:BEFORE[RealismOverhaul_HeatShield]
-{
-    heatShieldDiameter  = 3.91      // Previous Ablator = 848 corresponds to 3.68 diameter Lunar RO formula
-    heatShieldTag = Lunar
-    resetHeatShieldAblator = true
-}
-// Specific adjustments after default setup
-@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul_HeatShield]
-{
-    @MODULE[ModuleAblator]
-    {
-        charModuleName = HeatShieldCharAnim
-        charMin = 0
-        charMax = 1
-    }
 }
 
 //	================================================================================
