Rename Parts and Clone parts to make Soyuz TM/TMA/MS

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -46,7 +46,7 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = Soyuz MS Descent Module
+	title = Soyuz TM/TMA/MS Descent Module
 	manufacturer = RKK Energia
 	description = The Soyuz Descent Module (SA) is where the crew sits during both ascent and reentry. It's equipped with basic life support, RCS for control during reentry and landing engines for softening the landing. Another notable feature is the offset COM, which allows the pod to generate lifting force during reentry and allow a small degree of control over it's landing zone.
 	tags = soyuz ms, DECQ
