--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDecoupler.cfg
@@ -37,7 +37,7 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Soyuz MS Service Module Decoupler
+	title = Soyuz TM/TMA/MS Service Module Decoupler
 	manufacturer = RKK Energia
 	description = A structural truss decoupling system that connects the Soyuz Service Module (PAO) to the Descent Module (SA).
 	tags = soyuz ms, DECQ
