--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
@@ -34,7 +34,7 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Soyuz MS/Progress Docking System
+	title = Soyuz TM/TMA/MS/Progress Docking System
 	manufacturer = RKK Energia
 	description = The Soyuz and Progress docking system is the male part of a probe and drogue system. It's equipped with a rendezvous antenna and the soft-docking system. To use the docking system first extend the probe and then dock the two spacecraft. The probe will prevent them from connecting so that the Soyuz spacecraft can be rotated precisely to the desired position. Once that is done the probe is retracted, allowing hard docking to take place.
 	tags = soyuz ms, progress, DECQ
