--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
@@ -34,7 +34,7 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = Soyuz MS Orbital Module
+	title = Soyuz TM/TMA/MS Orbital Module
 	manufacturer = RKK Energia
 	description = The Orbital Module (BO) of the Soyuz contains everything that it is not needed for reentry. This includes the docking system, the airlock and the KURS automatic docking antennas. It is jettisoned before entering the atmosphere.
 	tags = soyuz ms, DECQ
@@ -215,20 +215,5 @@ PART
 			Ratio = 0.0000257297
 			DumpExcess = False
 		}
-	}
-}
-
-//	================================================================================
-//	Configure RealAntennas
-//	================================================================================
-
-@PART[ROC-SoyuzMSOM]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
-{
-	!MODULE[ModuleDataTransmitter],* {}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 1.0
-		RFBand = UHF		//Default to UHF-band
 	}
 }
