--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteMain.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteMain.cfg
@@ -35,7 +35,7 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = Soyuz MS Main Parachute
+	title = Soyuz TM/TMA/MS Main Parachute
 	manufacturer = RKK Energia
 	description = The primary parachute of the Soyuz TM/TMA/MS Descent Module (SA).
 	tags = soyuz ms, DECQ
