--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteSpare.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteSpare.cfg
@@ -1,3 +1,4 @@
+
 PART
 {
 	name = ROC-SoyuzMSParachuteSpare
@@ -35,7 +36,7 @@ PART
 	category = Utility
 	subcategory = 0
 	
-	title = Soyuz MS Emergency Parachute
+	title = Soyuz TM/TMA/MS Emergency Parachute
 	manufacturer = RKK Energia
 	description = A fast-opening emergency parachute for the Soyuz Descent Module. It is used after the abort sequence and it also serves as a backup for the main parachute.
 	tags = soyuz ms, DECQ
