--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSPeriscope.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSPeriscope.cfg
@@ -33,7 +33,7 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = Soyuz MS Vzor Periscope
+	title = Soyuz TM/TMA/MS Vzor Periscope
 	manufacturer = RKK Energia
 	description = A periscope with two viewing ports. It is used to manually maintain attitude during free flight and to dock the spacecraft in the case of a KURS malfunction.
 	tags = soyuz ms, DECQ
