--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -369,6 +369,12 @@ PART
 	}
 }
 
++PART[ROC-SoyuzMSServiceModule]
+{
+	@name = ROC-SoyuzMSServiceModule2
+	@title = Soyuz TM/TMA Service Module
+}
+
 //	================================================================================
 //	Configure RealAntennas
 //	================================================================================
@@ -383,12 +389,22 @@ PART
 		RFBand = S		//Default to S-band
 	}
 }
+@PART[ROC-SoyuzMSServiceModule2]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
+	}
+}
 
 //	================================================================================
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-SoyuzMSServiceModule]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-SoyuzMSServiceModule|ROC-SoyuzMSServiceModule2]:FOR[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
