--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
@@ -90,11 +90,22 @@ PART
 	}
 }
 
++PART[ROC-SoyuzMSSolarPanel]
+{
+	@name = ROC-SoyuzMSSolarPanel2
+	@title = Soyuz TM/TMA Solar Array
+
+	@SolarConfig
+	{
+		@area = 13.486
+	}
+}
+
 //	================================================================================
 //	Configure RealAntennas
 //	================================================================================
 
-@PART[ROC-SoyuzMSSolarPanel]:BEFORE[RealAntennas]
+@PART[ROC-SoyuzMSSolarPanel|!ROC-SoyuzMSSolarPanel2]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
