--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
@@ -36,7 +36,7 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = Soyuz MS Heatshield
+	title = Soyuz TM/TMA/MS Heatshield
 	manufacturer = RKK Energia
 	description = The heat shield for the Soyuz TM/TMA/MS Descent Module. It is jettisoned after main parachute deployment.
 	tags = soyuz ms, DECQ
