Hopefully Fix https://github.com/KSP-RO/ROCapsules/issues/53 Reformat Configs

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -1,16 +1,15 @@
 PART
 {
-	module = Part
 	name = ROC-LEMAscent
+	module = Part
 	author = DECQ, Pap
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
+
 	//	============================================================================
 	//	Model and Dimensions
 	//	============================================================================
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/LEM/LEM_Ascent
@@ -22,76 +21,66 @@ PART
 		scale = 1.175, 1.0, 1.175
 		position = 0.0, 1.325, 0.0
 	}
-	
+
+	INTERNAL
+	{
+		name = ROC-LEMInternal
+	}
+
 	scale = 1.0
 	rescaleFactor = 1.0
-	
+
 	node_stack_top = 0.0, 1.405, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.375, 0.0, 0.0, -1.0, 0.0, 2
 
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
-	bulkheadProfiles = size1, size2
 
-	// --- FX definitions ---
-	fx_exhaustFlame_blue_small = 0.0, -0.5337813, 0.1355984, 0.0, 1.0, 0.0, running
-	fx_exhaustLight_blue = 0.0, -0.5337813, 0.1355984, 0.0, 0.0, 1.0, running
-		
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Apollo LM Ascent Stage
-	manufacturer = Grumman Aerospace Corporation
-	description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
-	
-	mass = 2.2
-	
-	category = Pods
-	subcategory = 0
-	
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent
-	
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	
+	category = Pods
+	subcategory = 0
+	title = Apollo LM Ascent Stage
+	manufacturer = Grumman Aerospace Corporation
+	description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
+	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent
+
 	vesselType = Lander
 	stagingIcon = LIQUID_ENGINE
 	CrewCapacity = 2
-
-	leaveCategory = True
-	fuelCrossfeed = True
-	stageOffset = 1
-	childStageOffset = 1
-	NoCrossFeedNodeKey = bottom
+	bulkheadProfiles = size1, size2
 
 	engineType = LMAE
 	ignoreMass = True
-	
-	INTERNAL
-	{
-		name = ROC-LEMInternal
-	}
-	
+
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-		
+
+	mass = 2.2
 	crashTolerance = 8
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	emissiveConstant = 0.6 // not too absorptive for reentry
+	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 2.0
-	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
-	
+	fuelCrossfeed = True
+	NoCrossFeedNodeKey = bottom
+	leaveCategory = True
+	stageOffset = 1
+	childStageOffset = 1
+
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
-	
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -106,13 +95,13 @@ PART
 			rate = 1.525
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleSAS
 		SASServiceLevel = 3
 	}
-	
+
 	MODULE
 	{
 		name = ModuleScienceContainer
@@ -120,205 +109,7 @@ PART
 		storeActionName = Store Experiments
 		storageRange = 2.0
 	}
-	
-	MODULE
-	{
-		name = RasterPropMonitorComputer
-		storedStrings = v 0.2.0.0|15.01.2017|	LEM	   |LUNAR|CREW VEHICLE|SQD002002-A1|SSS-DG|		 DECQ  &   Dragon01
-		//triggeredEvents = ALCOR_CALLRECOVERYTEAM
-			RPM_COLOROVERRIDE
-			{
-			
-			// NASA gauge ----------------------------------------------
-			
-				COLORDEFINITION
-				{
-					name = ASET_NASAGAUGESCALE_ACTIVECOLOR
-					color= 144,139,118,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_NASAGAUGEHAND_ACTIVECOLOR
-					color= 184,179,148,255
-				}
-				
-			// ASET aircraft instruments -----------------------------
 
-			// round gauge backlight
-
-				COLORDEFINITION
-				{
-					name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
-					color = 144,139,118,255
-				}
-			   
-				COLORDEFINITION
-				{
-					name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
-					color =184,179,148,255
-				}
-
-			// switchers -------------------------------------------------
-			
-				COLORDEFINITION
-				{
-					name = ASET_SWITCHER_NAME_POSITIVECOLOR
-					color= 184,179,158,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_SWITCHER_STATE_POSITIVECOLOR
-					color= 154,149,118,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_SWITCHER_BORDER_POSITIVECOLOR
-					color= 134,129,98,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_SWITCHER_MARK_POSITIVECOLOR
-					color= 194,189,158,255
-				}
-				
-			// LEDs off
-			
-				COLORDEFINITION
-				{
-					name = ASET_SWITCHER_LEDS_POSITIVECOLOR
-					color= 0,0,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_SWITCHER_LEDS_ZEROCOLOR
-					color= 0,0,0,255
-				}
-				
-			// Numeric Input display ---------------------------------------
-			
-			// background
-			
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
-					color= 0,0,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
-					color= 0,40,0,255
-				}
-				
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
-					color= 0,40,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
-					color= 0,0,0,255
-				}
-				
-			// readout
-			
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
-					color= 0,255,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
-					color= 0,55,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
-					color= 0,0,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
-					color= 0,255,0,90
-				}
-
-			// digital indicator --------------------------------
-		
-			// readout
-		
-				COLORDEFINITION
-				{
-					name = ASET_DIGITALINDICATOR_NORMAL_COLOR
-					color= 0,255,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_DIGITALINDICATOR_WARNING_COLOR
-					color= 0,255,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_DIGITALINDICATOR_STBY_COLOR
-					color= 0,255,0,120
-				}
-			
-			// legend
-		
-				COLORDEFINITION
-				{
-					name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
-					color= 0,255,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
-					color= 0,255,0,120
-				}
-			
-
-			// label plate ---------------------------------------------
-			
-			// background
-				
-				COLORDEFINITION
-				{
-					name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
-					color= 80,80,80,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
-					color= 80,80,80,255
-				}
-				
-				COLORDEFINITION
-				{
-					name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
-					color= 0,0,0,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
-					color= 0,0,0,255
-				}
-				
-			// label text
-				
-				COLORDEFINITION
-				{
-					name = ASET_PLATETEXT_POSITIVECOLOR
-					color= 174,169,138,255
-				}
-				COLORDEFINITION
-				{
-					name = ASET_PLATETEXT_ZEROCOLOR
-					color= 255,255,255,255
-				}
-				
-			}
-	}
-	
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -326,19 +117,17 @@ PART
 		thrusterTransformName = RCSthruster
 		thrusterPower = 0.445
 		runningEffectName = control
-		
+
 		PROPELLANT
 		{
 			name = Aerozine50
 			ratio = 0.5575
 		}
-
 		PROPELLANT
 		{
 			name = NTO
 			ratio = 0.4425
 		}
-		
 		atmosphereCurve
 		{
 			key = 0 278
@@ -356,6 +145,16 @@ PART
 		ignitionThreshold = 0.1
 		heatProduction = 20
 	}
+
+    MODULE
+    {
+        name = ModuleAnimateGeneric
+        animationName = Antenna
+        startEventGUIName = Extend HGA
+        endEventGUIName = Retract HGA
+        actionGUIName = Toggle HGA
+		allowAnimationWhileShielded = False
+    }
 
 	MODULE
 	{
@@ -418,7 +217,8 @@ PART
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
-		passable = True
+		passable = true
+		impassablenodes = bottom
 	}
 
 	MODULE
@@ -456,24 +256,10 @@ PART
 			maxAmount = 1120.4
 		}
 	}
-	
+
 	//	============================================================================
 	//	Comms
 	//	============================================================================
-	
-	MODULE
-	{
-		name = ModuleDeployableAntenna
-		animationName = Antenna
-		pivotName = 2
-		showStatus = False
-		isBreakable = False
-		isTracking = False
-		extendActionName = Extend HGA
-		retractActionName = Retract HGA
-		extendpanelsActionName = Toggle HGA
-		windResistance = 1.0
-	}
 
 	MODULE
 	{
@@ -488,11 +274,11 @@ PART
 		packetResourceCost = 0.1
 		DeployFxModules = 0
 	}
-	
+
 	//	============================================================================
 	//	Animations and Textures
 	//	============================================================================
-	
+
 	EFFECTS
 	{
 		running
@@ -604,7 +390,6 @@ PART
 	@description = The ascent stage and crew compartment of the Apollo Lunar Module. This has the ascent engine integrated.
 }
 
-
 //	================================================================================
 //	TAC Life Support Compatibility
 //	================================================================================
@@ -673,8 +458,6 @@ PART
 		}
 	}
 
-	!MODULE[TacGenericConverter],*{}
-
 	MODULE
 	{
 		name = TacGenericConverter
@@ -714,80 +497,195 @@ PART
 }
 
 //	================================================================================
-//	Configure RemoteTech
+//	Add RasterPropMonitorComputer Module
 //	================================================================================
 
-@PART[ROC_LEMAscent]:FOR[ROCapsules]:NEEDS[RemoteTech]
+@PART[ROC-LEMAscent]:NEEDS[RasterPropMonitor]
 {
-	@description ^= :$: Features an integrated telecommunications system with a maximum effective range of 600 Mm, power consumption 50 Watts, data rate 1 Mbit/s.
-
-	!MODULE[ModuleDeployableAntenna],*{}
-
-	!MODULE[ModuleDataTransmitter],*{}
-
-	!MODULE[ModuleRTAntenna*],{}
-
-	!MODULE[ModuleSPU*],*{}
-
-	@MODULE[ModuleCommand]
-	{
-		@RESOURCE[ElectricCharge]
-		{
-			@rate -= 0.025
-		}
-	}
-
 	MODULE
 	{
-		name = ModuleSPU
-		IsRTCommandStation = False
-		RTCommandMinCrew = 0
-	}
-
-	//	Parabolic S-band antenna for Earth communications.
-	MODULE
-	{
-		name = ModuleRTAntenna
-		ActionMode0Name = Deactivate HGA
-		ActionMode1Name = Activate HGA
-		IsRTActive = False
-		Mode0DishRange = 0
-		Mode1DishRange = 600000
-		DishAngle = 13.0
-		EnergyCost = 0.025
-		DeployFxModules = 0
-
-		TRANSMITTER
+		name = RasterPropMonitorComputer
+		storedStrings = v 0.2.0.0|15.01.2017|	LEM	   |LUNAR|CREW VEHICLE|SQD002002-A1|SSS-DG|		 DECQ  &   Dragon01
+		//triggeredEvents = ALCOR_CALLRECOVERYTEAM
+		RPM_COLOROVERRIDE
 		{
-			PacketInterval = 1.0
-			PacketSize = 1.024
-			PacketResourceCost = 0.025
-		}
-	}
+			// NASA gauge ----------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGESCALE_ACTIVECOLOR
+				color= 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGEHAND_ACTIVECOLOR
+				color= 184,179,148,255
+			}
 
-	//	Omnidirectional UHF antennas for CSM and surface EVA communications.
-	MODULE
-	{
-		name = ModuleRTAntenna
-		ActionMode0Name = Deactivate LGA
-		ActionMode1Name = Activate LGA
-		IsRTActive = False
-		Mode0OmniRange = 0
-		Mode1OmniRange = 100000
-		EnergyCost = 0.025
-		DeployFxModules = 0
+			// ASET aircraft instruments -----------------------------
+			// round gauge backlight
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
+				color = 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
+				color =184,179,148,255
+			}
 
-		TRANSMITTER
-		{
-			PacketInterval = 1.0
-			PacketSize = 0.512
-			PacketResourceCost = 0.025
+			// switchers -------------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_NAME_POSITIVECOLOR
+				color= 184,179,158,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_STATE_POSITIVECOLOR
+				color= 154,149,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_BORDER_POSITIVECOLOR
+				color= 134,129,98,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_MARK_POSITIVECOLOR
+				color= 194,189,158,255
+			}
+
+			// LEDs off
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_POSITIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_ZEROCOLOR
+				color= 0,0,0,255
+			}
+
+			// Numeric Input display ---------------------------------------
+			// background
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
+					color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
+					color= 0,40,0,255
+			}
+				
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
+					color= 0,40,0,255
+			}
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
+					color= 0,0,0,255
+			}
+
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
+				color= 0,55,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
+				color= 0,255,0,90
+			}
+
+			// digital indicator --------------------------------
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_WARNING_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_STBY_COLOR
+				color= 0,255,0,120
+			}
+
+			// legend
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
+				color= 0,255,0,120
+			}
+
+			// label plate ---------------------------------------------
+			// background
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
+				color= 80,80,80,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
+				color= 80,80,80,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
+				color= 0,0,0,255
+			}
+
+			// label text
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_POSITIVECOLOR
+				color= 174,169,138,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_ZEROCOLOR
+				color= 255,255,255,255
+			}	
 		}
 	}
 }
+
 //	================================================================================
 //	Configure RealAntennas
 //	================================================================================
+
 @PART[ROC-LEMAscent]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
@@ -804,6 +702,7 @@ PART
 		RFBand = VHF
 	}
 }
+
 //	================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
 //	And also override the mass set by RO engine configs
@@ -813,4 +712,43 @@ PART
 {
 	!RESOURCE,*{}
 	@mass = 2.2
+}
+
+//	==================================================
+//	Lunar Module ascent stage plume configuration.
+//	==================================================
+
+@PART[ROC-LEMAscent]:FOR[RealPlume]:NEEDS[SmokeScreen]
+{
+	PLUME
+	{
+		name = Hypergolic-OMS-White
+		transformName = thrustTransform
+		plumePosition = 0.0, 0.0, -0.25
+		plumeScale = 0.25
+		flarePosition = 0.0, 0.0, -1.0
+		flareScale = 0.25
+		smokePosition = 0.0, 0.0, 0.0
+		smokeScale = 1.0
+		slagPosition = 0.0, 0.0, 0.0
+		slagScale = 1.0
+		localRotation = 0.0, 0.0, 0.0
+		emissionMult = 0.5
+		energy = 1.0
+		speed = 1.0
+	}
+
+	@MODULE[ModuleEngines*]
+	{
+		%powerEffectName = Hypergolic-OMS-White
+		!runningEffectName = NULL
+	}
+
+	@MODULE[ModuleEngineConfigs]
+	{
+		@CONFIG,*
+		{
+			%powerEffectName = Hypergolic-OMS-White
+		}
+	}
 }
