--- a/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
@@ -1,66 +1,53 @@
 PART
 {
-	module = Part
 	name = ROC-LEM-LMDE
+	module = Part
 	author = DECQ, Pap
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
+
 	//	============================================================================
 	//	Model and Dimensions
 	//	============================================================================
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/LEM/LEM_LMDE
-		scale = 1.0, 1.0, 1.0
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.0
-	
+
 	node_stack_top = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.565, 0.0, 0.0, -1.0, 0.0, 2
 
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
-	bulkheadProfiles = size1, size2
 
-	// --- FX definitions ---
-	fx_exhaustFlame_blue_small = 0.0, -0.5337813, 0.1355984, 0.0, 1.0, 0.0, running
-	fx_exhaustLight_blue = 0.0, -0.5337813, 0.1355984, 0.0, 0.0, 1.0, running
-		
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Apollo LM Descent Engine
-	manufacturer = TRW
-	description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boiloff, but are far less efficient than hydrolox or even kerolox. The version used on J-class missions had slightly higher specific impulse (this, along with other changes, gave enough payload capacity for the rover, for example). A later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability.
-	
-	mass = 0.179
-	
-	category = Engine
-	subcategory = 0
-	
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, descent, landing, engine, lmde
-	
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
+	category = Engine
+	subcategory = 0
+	title = Apollo LM Descent Engine
+	manufacturer = TRW
+	description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boiloff, but are far less efficient than hydrolox or even kerolox. The version used on J-class missions had slightly higher specific impulse (this, along with other changes, gave enough payload capacity for the rover, for example). A later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability.
+	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, descent, landing, engine, lmde
 
-	fuelCrossfeed = True
-	stageOffset = 1
-	childStageOffset = 1
 	stagingIcon = LIQUID_ENGINE
+	bulkheadProfiles = size1, size2
 
 	engineType = LMDE
-	
+
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-		
+
+	mass = 0.179
 	crashTolerance = 10
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
@@ -69,7 +56,10 @@ PART
 	skinMassPerArea = 2.0
 	breakingForce = 250
 	breakingTorque = 250
-	
+	fuelCrossfeed = True
+	stageOffset = 1
+	childStageOffset = 1
+
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
@@ -170,5 +160,44 @@ PART
 				loop = false
 			}
 		}	
+	}
+}
+
+//	==================================================
+//	Lunar Module Descent Engine plume configuration.
+//	==================================================
+
+@PART[ROC-LEM-LMDE]:FOR[RealPlume]:NEEDS[SmokeScreen]
+{
+	PLUME
+	{
+		name = Hypergolic-OMS-White
+		transformName = thrustTransform
+		plumePosition = 0.0, 0.0, -0.75
+		plumeScale = 0.75
+		flarePosition = 0.0, 0.0, -1.3
+		flareScale = 0.5
+		smokePosition = 0.0, 0.0, 0.0
+		smokeScale = 1.0
+		slagPosition = 0.0, 0.0, 0.0
+		slagScale = 1.0
+		localRotation = 0.0, 0.0, 0.0
+		emissionMult = 0.5
+		energy = 1.0
+		speed = 1.0
+	}
+
+	@MODULE[ModuleEngines*]
+	{
+		%powerEffectName = Hypergolic-OMS-White
+		!runningEffectName = NULL
+	}
+
+	@MODULE[ModuleEngineConfigs]
+	{
+		@CONFIG,*
+		{
+			%powerEffectName = Hypergolic-OMS-White
+		}
 	}
 }
