--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
@@ -1,13 +1,175 @@
-+PART[ROE-AJ10Adv]
+PART
 {
-	@name = ROC-D2AJ10-133
-	@title = AJ10-133-LH
-	@manufacturer = Aerojet
-	@description = AJ10 variant burning liquid hydrogen and oxygen, proposed for use on the GE D-2 vehicle. (HINT: hold ALT while placing engines to disable surface attach.)
-	
-	@tags = AJ10, D2, 133, GE
-	
-	@engineType = AJ10_Adv
+	name = ROC-D2AJ10-133
+	module = Part
+	author = Mcdouble, Vader111
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
+	MODEL
+	{
+		model = ROCapsules/Assets/McDouble/D2/D2AJ10-133
+	}
+
+	scale = 1
+	rescaleFactor = 1.0
+
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -1.9834, 0.0, 0.0, -1.0, 0.0, 1
+
+	CoMOffset = 0.0, -0.25, 0.0
+
+	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	attachRules = 1,0,1,0,0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
+	category = Engine
+	subcategory = 0
+
+	title = AJ10-133-LH
+	manufacturer = Aerojet
+	description = AJ10 variant burning liquid hydrogen and oxygen, proposed for use on the GE D-2 vehicle. (HINT: hold ALT while placing engines to disable surface attach.)
+	tags = AJ10, D2, 133, GE
+
+	bulkheadProfiles = size0p5
+
+	engineType = AJ10_Adv
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
+	crashTolerance = 10
+	breakingForce = 250
+	breakingTorque = 250
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 2.0
+	stagingIcon = LIQUID_ENGINE
+	fuelCrossfeed = True
+	stageOffset = 1
+	childStageOffset = 1
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
+	MODULE
+	{
+		name = ModuleEnginesRF
+		thrustVectorTransformName = thrustTransform
+	}
+
+	MODULE
+	{
+		name = ModuleGimbal
+		gimbalResponseSpeed = 9
+		useGimbalResponseSpeed = true
+		gimbalTransformName = gimbal
+		gimbalRange = 4
+	}
+
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.4
+		maxDistance = 15
+		falloff = 2
+		thrustTransformName = thrustTransform
+	}
+
+	MODULE
+	{
+		name = FXModuleThrottleEffects
+		fxModuleNames = heatColor
+		responseSpeed = 1.0
+		dependOnEngineState = True
+		dependOnThrottle = True
+	}
+
+	MODULE
+	{
+		name = FXModuleThrottleEffects
+		fxModuleNames = throttleColor
+		responseSpeed = 1.0
+		dependOnEngineState = True
+		dependOnThrottle = True
+	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		moduleID = heatColor
+		animRate = 0.025
+		shaderProperty = _EmissiveColor
+		excludedRenderer = innerGlow
+		toggleInEditor = false
+		toggleInFlight = false
+		redCurve
+		{
+			key = 1 1 1 1
+			key = 1 1 1 1
+		}
+		greenCurve
+		{
+			key = 0 0 1 1
+			key = 1 1 1 1
+		}
+		blueCurve
+		{
+			key = 0 0 1 1
+			key = 1 1 1 1
+		}
+		alphaCurve
+		{
+			key = 0 0 1 1
+			key = 1 1 1 1
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		moduleID = throttleColor
+		animRate = 2
+		shaderProperty = _TintColor
+		includedRenderer = innerGlow
+		toggleInEditor = false
+		toggleInFlight = false
+		redCurve
+		{
+			key = 0 0
+			key = 1 1
+		}
+		greenCurve
+		{
+			key = 0 0
+			key = 1 1
+		}
+		blueCurve
+		{
+			key = 0 0
+			key = 1 1
+		}
+		alphaCurve
+		{
+			key = 0 0
+			key = 1 1
+		}
+	}
 }
 
 @PART[ROC-D2AJ10-133]:AFTER[RealismOverhaulEngines]
@@ -41,10 +203,10 @@
 		energy = 1
 		emissionMult = 1
 
-		shockPosition = 0,0,1
+		shockPosition = 0,0,0.41
 		shockScale = 1
 
-		plumePosition = 0,0,0.55
+		plumePosition = 0,0,0.128
 		plumeScale = 1.5
 
 		plume2Scale = 1.2
@@ -135,4 +297,3 @@
 		}
 	}
 }
-
