--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
@@ -21,7 +21,7 @@ PART
 	cost = 1
 	category = Thermal
 	subcategory = 0
-	title = Block III+ Apollo Heatshield
+	title = Apollo Block III+ Heatshield
 	manufacturer = Rockwell International
 	description = LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
 	attachRules = 1,0,1,0,0
